--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^1.5.0",
     "framer-motion": "^11.16.0",
     "next": "15.1.1",
     "react": "^19.0.0",
