--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.69.0",
     "@vis.gl/react-google-maps": "^1.5.0",
+    "axios": "^1.8.4",
     "framer-motion": "^11.16.0",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
