--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
